--- a/Projeto página/style.css
+++ b/Projeto página/style.css
@@ -120,6 +120,7 @@ main {
     font-size: 20px;
     max-width: 791px;
     margin-top: 24px;
+    margin-bottom: 30px;
 
 }
 
@@ -130,6 +131,14 @@ main {
     text-align: left;
     padding: 96px;
     gap: 100px;
+}
+
+.imagem-central{
+
+    width: 1000px;
+    height: 300px;
+    border-radius: 8px;
+    padding-bottom: 25px
 
 
 }
