--- a/Projeto página/style.css
+++ b/Projeto página/style.css
@@ -14,6 +14,7 @@
     margin: 0;
     padding: 0;
     font-family: "Inter", sans-serif;
+    box-sizing: border-box;
 }
 
 header {
@@ -124,6 +125,63 @@ main {
 
 }
 
+.main-section-sobre-2 {
+
+    display: flex;
+    color: #0a0909;
+    text-align: center;
+    flex-direction: column;
+    max-width: 1440px;
+    max-height: 407px;
+    margin-top: 96px;
+
+}
+
+.main-section-sobre-p4 {
+
+    color: #8E2424;
+    font-size: 14px;
+    margin-bottom: 30px;
+    text-align: center;
+    background-color: #f9f4f4;
+    width: fit-content;
+    margin: 0 auto;
+    border-radius: 10px;
+
+
+}
+
+.main-section-sobre-p5 {
+
+    font-size: 36px;
+    color: #101828;
+    text-align: center;
+    margin-bottom: 20px;
+
+
+}
+
+.main-section-sobre-p6 {
+
+    color: #667085;
+    font-size: 16px;
+    text-align: center;
+
+}
+
+.imagem-central {
+
+    width: 1400px;
+    height: 400px;
+    padding-bottom: 25px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+
+}
+
+
 .main_section_dados {
 
     display: flex;
@@ -133,15 +191,7 @@ main {
     gap: 100px;
 }
 
-.imagem-central{
 
-    width: 1000px;
-    height: 300px;
-    border-radius: 8px;
-    padding-bottom: 25px
-
-
-}
 
 .Text-number {
     max-width: 280px;
