Atualização de Dados

--- a/Projeto página/style.css
+++ b/Projeto página/style.css
@@ -225,6 +225,25 @@ main {
 
 }
 
+.Salario-por-função{
+
+text-align: center;
+
+}
+
+.Desenvolvedora{
+
+text-align: center;
+
+}
+
+
+
+
+
+
+
+
 
 footer {
 
